--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <li><a href="#header">Home</a></li>
                     <li><a href="#about">About</a></li>
                     <li><a href="#experience">Experience</a></li>
-                    <li><a href="#portfolio">Projects</a></li>
+                    <li><a href="#projects">Projects</a></li>
                     <li><a href="#contact">Contact</a></li>
                     <i class="fas fa-times" onclick="closemenu()"></i>
                 </ul>
@@ -38,9 +38,6 @@
     <div id="about">
         <div class="container">
             <div class="row">
-                <div class="about-col-1">
-                    <img src="images/passport_pic.jpg">
-                </div>
                 <div class="about-col-2">
                     <h1 class="sub-title">About Me</h1>
                     <p>Passionate Mechanical Engineering student at Vellore Institute of Technology. Bridging theory
@@ -82,11 +79,11 @@
                             </div>
                             <div>
                                 <h2>Coding</h2>
-                                <p>Python, Java, Web Dev.</p>
+                                <p>Python, Java, VBA, Web Dev.</p>
                             </div>
                             <div>
                                 <h2>Database Management</h2>
-                                <p>Excel, MySQL.</p>
+                                <p>Excel.</p>
                             </div>
                             <div>
                                 <h2>Product Design & Visualization</h2>
