--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
 
 
                         </div>
-                        <a href="images/my_cv.pdf" download class="btn btn2">Download CV</a>
+                        <a href="images/Nain_Gourang_Chawla_CV.pdf" download class="btn btn2">Download CV</a>
                     </div>
                 </div>
             </div>
