--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portfolio</title>
+    <title>Nain Gourang Chawla</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
     <script src="https://kit.fontawesome.com/ba9c496edf.js" crossorigin="anonymous"></script>
@@ -79,11 +79,11 @@
                             </div>
                             <div>
                                 <h2>Coding</h2>
-                                <p>Python, Java, VBA, Web Dev.</p>
+                                <p>Python, Java, Web Dev.</p>
                             </div>
                             <div>
                                 <h2>Database Management</h2>
-                                <p>Excel.</p>
+                                <p>Excel, MySQL.</p>
                             </div>
                             <div>
                                 <h2>Product Design & Visualization</h2>
